<resources>
    <string name="app_name">MovieRater</string>
    <string name="movieTitle">Name</string>
    <string name="movieDesc">Description</string>
    <string name="movieLang">Language</string>
    <string name="eng_lang">English</string>
    <string name="ch_lang">Chinese</string>
    <string name="tml_lang">Tamil</string>
    <string name="my_lang">Malay</string>
    <string name="movieRelease">Release Date</string>
    <string name="movieType">Not Suitable for all audiences</string>
    <string name="vl">violence</string>
    <string name="langUsed">Language Used</string>
    <string name="btnText">ADD MOVIE</string>
    <string name="etMovieTitle">Enter the title of movie</string>
    <string name="etMovieDesc">Enter a short description of the movie</string>
    <string name="etMovieRelease">Enter release date</string>
    <string name="Title">Title:</string>
    <string name="Desc">Overview:</string>
    <string name="Lang">Language:</string>
    <string name="Release">Release Date:</string>
    <string name="Age">Suitable for children below 13:</string>
    <string name="btnRate">Rate the movie</string>
    <string name="DetailRating">Share your view on the show</string>

</resources>
