<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="nyp.sit.t2107.movierater.MainActivity">

    <TextView
            android:id="@+id/DisplayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"/>

    <TextView
            android:id="@+id/DisplayMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/DisplayDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Desc"/>

    <TextView
            android:id="@+id/DisplayMovieDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/DisplayLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lang"/>

    <TextView
            android:id="@+id/DisplayMovieLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/DisplayRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Release"/>

    <TextView
            android:id="@+id/DisplayMovieRelease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/DisplayAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Age"/>

    <TextView
            android:id="@+id/DisplaySuitableAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRateMovie"
            android:text="@string/btnRate"/>

</LinearLayout>